@@ -7,7 +7,7 @@
 // Generated by script-code.xsl
 // DO NOT EDIT
 
-#line 11 "tools/script-code.xsl"
+//#line 11 "tools/script-code.xsl"
 
 #include "common/gcbase.h"
 #include "common/string.h"
@@ -113,8 +113,6 @@ class NAME : public Scriptix::Native \
 		{ if (other.is_a(AweMUD_ ## NAME ## Type)) return our_data == ((NAME*)other.get())->our_data; \
 		else return false; } \
 };
-
-namespace Scriptix { extern const TypeDef Struct_Type; }
 
 // ------------- BEGIN GENERATED BINDINGS ---------------
 
@@ -250,34 +248,24 @@ namespace Scriptix { extern const TypeDef Struct_Type; }
     <!-- end private namespace -->
     <xsl:text>}</xsl:text>
 
-    <!-- Type defs -->
-    <xsl:for-each select="type[not(doconly)]">
-      SX_BEGINMETHODS(<xsl:value-of select="name"/>)
-      <xsl:for-each select="method[not(code) or string-length(code)!=0]">
-        SX_DEFMETHOD(_inter_method_<xsl:value-of select="../name"/>_<xsl:value-of select="name"/>, "<xsl:value-of select="name"/>", <xsl:value-of select="count(arg)"/>, 0)
-      </xsl:for-each>
-      SX_ENDMETHODS
-      SX_TYPEIMPL(
-        <xsl:value-of select="name"/>,
-        "<xsl:value-of select="name"/>",
-        <xsl:choose>
-          <xsl:when test="parent"><xsl:value-of select="parent"/></xsl:when>
-          <xsl:otherwise>Scriptix::Struct</xsl:otherwise>
-        </xsl:choose>
-      )
-    </xsl:for-each>
-      
     void
     SScriptBindings::bind() {
     <xsl:for-each select="streamop">
       Scriptix::ScriptManager.add_function(new Scriptix::Function(Scriptix::Atom(S("@<xsl:value-of select="name"/>")), <xsl:value-of select="count(arg)+1"/>, _inter_streamop_<xsl:value-of select="name"/>));
     </xsl:for-each>
+
     <xsl:for-each select="function[not(code) or string-length(code)!=0]">
       Scriptix::ScriptManager.add_function(new Scriptix::Function(Scriptix::Atom(S("<xsl:value-of select="name"/>")), <xsl:value-of select="count(arg)"/>, _inter_function_<xsl:value-of select="name"/>));
     </xsl:for-each>
 
+    Scriptix::Atom atom;
+    Scriptix::TypeInfo* type;
     <xsl:for-each select="type[not(doconly)]">
-      AweMUD_<xsl:value-of select="name"/>Type = Scriptix::ScriptManager.add_type(&amp;<xsl:value-of select="name"/>_Type);
+      AweMUD_<xsl:value-of select="name"/>Type = type = Scriptix::ScriptManager.add_type(new Scriptix::TypeInfo(Scriptix::Atom(S("<xsl:value-of select="name"/>")), <xsl:choose><xsl:when test="parent">AweMUD_<xsl:value-of select="parent"/>Type</xsl:when><xsl:otherwise>ScriptManager.get_struct_type()</xsl:otherwise></xsl:choose>));
+      <xsl:for-each select="method[not(code) or string-length(code)!=0]">
+        atom = Scriptix::Atom(S("<xsl:value-of select="name"/>"));
+        type->add_method(atom, new Function(atom, <xsl:value-of select="count(arg)" />, _inter_method_<xsl:value-of select="../name"/>_<xsl:value-of select="name"/>));
+      </xsl:for-each>
     </xsl:for-each>
 
     <xsl:for-each select="global-group/global">
